# truelearn

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  LICENSE-3RD-PARTY  README.md  README.rst  donotcommit.py  peek.mapping.csv  prospector.yaml  prospector_report.xml  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: Static_Analysis.yml  Unit_Tests.yml  black.yml  clean_deployments.yml  clean_repo.yml  coverage.yml  docs.yml  docs_build.yml  docs_build_and_deploy.yml  python-publish.yml  python_publish.yml  remove_deployments.yml  static_analysis.yml  typo.yml  typos.yml  unit_tests.yml
benchmarks/: bench_kn_nlearners.py
docs/: Makefile  authors.rst  changelog.rst  conf.py  index.rst  references.rst
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/dev/: advanced_installation.rst  before_pr.rst  before_started.rst  design_considerations.rst  dev_installation.rst  documentation.rst  get_started.rst  index.rst  maintenance.rst  testing.rst
docs/developer/: advanced_installation.rst  testing.rst
docs/developers/: documentation.rst  index.rst  maintainer.rst
docs/modules/: api_reference.rst  classes.rst  datasets.rst  learning.rst  metrics.rst  models.rst  preprocessing.rst  visualization.rst
docs/templates/: class.rst  class_with_call.rst  class_without_init.rst  function.rst
docs/tutorial/: quickstart.rst
examples/: README.rst  plot_interest_bubble.py  plot_interest_radar.py  plot_knowledge_bar.py  plot_knowledge_classifier_radar.py  plot_knowledge_dot.py  plot_knowledge_line.py  plot_knowledge_pie.py  plot_knowledge_rose.py  plot_knowledge_tree.py  plot_knowledge_word.py  truelearn_experiments.py  wikify.py
examples/datasets/: README.rst
examples/learning/: README.rst
examples/metrics/: README.rst
examples/models/: README.rst
examples/preprocessing/: README.rst  wikify.py
examples/visualisations/: README.rst
truelearn/: __init__.py  _constraint.py  base.py  errors.py
truelearn/bayesian_models/: truelearn_ink_classifier.py  truelearn_interest_classifier.py  truelearn_knowledge_classifier.py  truelearn_novel_classifier.py
truelearn/datasets/: __init__.py  _base.py  _peek.py  id_to_wiki_url_mapping.csv
truelearn/learner_models/: __init__.py  learner_data.py
truelearn/learning/: InterestsClassifier.py  KnowledgeClassifier.py  NoveltyClassifier.py  __init__.py  _base.py  _base_classifier.py  _constraint.py  _engage_classifier.py  _ink_classifier.py  _interest_classifier.py  _knowledge_classifier.py  _majority_classifier.py  _novelty_classifier.py  _persistent_classifier.py  _truelearn_base.py  base.py  truelearn_ink_classifier.py  truelearn_interest_classifier.py  truelearn_knowledge_classifier.py  truelearn_novel_classifier.py
truelearn/logging/: json_logger.py
truelearn/metrics/: confusion_matrix.py
truelearn/models/: __init__.py  _abstract_knowledge.py  _base.py  _event.py  _event_model.py  _knowledge.py  _learner.py  _learner_model.py  _topic.py  base.py
truelearn/preprocessing/: __init__.py  _utils.py  _wikifier.py  benchmark.py  wikifier.py
truelearn/tests/: __init__.py  test_constraints.py  test_datasets.py  test_learning.py  test_models.py  test_preprocessing.py  test_utils_metrics.py  test_utils_visualisations.py  typo_check.txt
truelearn/utils/: __init__.py  json_extractor.py
truelearn/utils/metrics/: __init__.py  _base.py  _classification.py  _confusion_matrix.py
truelearn/utils/persistent/: __init__.py  _json_handler.py  _json_logger.py
truelearn/utils/visualisations/: __init__.py  _bar_plotter.py  _base.py  _bubble_plotter.py  _dot_plotter.py  _dynamic_plotter.py  _line_plotter.py  _pie_plotter.py  _pie_rose_plotter.py  _radar_plotter.py  _static_plotter.py  _treemap_plotter.py  _word_plotter.py
truelearn_experiments/: analyse_results.py  baseline_models.py  baseline_recommender_models.py  hybrid_model.py  knowledge_tracing_model.py  run_experiments.py  run_experiments_seq.py  trueknowledge_recommender_models.py  utils.py
truelearn_experiments/compute_performace_for_pr_cos_weights/: generate_dataset_shell_script.py  summarise_grid_search_results.py
truelearn_experiments/data_analysis/: analyse_active_user_performance.py  analyse_model_results_truelearn_hybrid.py  analyse_performance_of_user_buckets.py  analyse_user_activity_over_time.py  analyse_user_stats_performance_relationship.py  convert_json_truelearn_run_data_to_csv.py  generate_dataset_stats.py  generate_most_active_user_analytics.py  generate_userwise_analyses.py  generate_userwise_stats.py  get_cosine_destribution_for_all_topics_in_lectures.py  get_cosine_distributions.py  get_related_topic_distribution.py  plotting_utils.py  summarise_model_training_results.py  time_compexity_semantic_truelearn.py  topic_sparcity_performance_analysis.py
truelearn_experiments/data_analysis/engagement_for_quality/: analyse_engagement_of_learners.py  analyse_performance_of_quality_hybrid.py  compare_pink_to_ink.py  train_quality_model_for_PEEK.py
truelearn_experiments/grid_search/: generate_grid_search_config.py  get_result_summary.py  run_grid_search.py  run_validation_experiment.py
truelearn_experiments/grid_search/eval/: generate_topicwise_plots.py  summarise_experiment_results.py  summary_pr_cos_combo_results.py
truelearn_experiments/grid_search/shell_cmd_generators/: generate_results_for_experiment_1.py
truelearn_experiments/semantic_truelearn/: validate_topic_correlation_to_f1_relationship.py
truelearn_experiments/semantic_truelearn/data_preperation/: add_truelearn_wikipedia_ids.py  generate_concept_frequencies.py  generate_intertopic_correlation.py  generate_lecture_transitions_mapping.py  generate_required_semantic_relatedness_measures.py  get_all_topics_for_user.py
truelearn_experiments/semantic_truelearn/diagnostics/: diagnose_truelearn_novelty_with_user.py  investigate_temparal performance.py
unit_tests/: ci_test.py
(+64 files in other folders)
